--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
+    <!-- Normalize CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css.map">
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 
